# assimp

port/assimp_rs/: Cargo.toml
port/assimp_rs/src/: lib.rs
port/assimp_rs/src/camera/: mod.rs
port/assimp_rs/src/formats/: mod.rs
port/assimp_rs/src/formats/x/: errors.rs  exporter.rs  importer.rs  mod.rs  parser.rs  structs.rs
port/assimp_rs/src/formats/x/parser/: binary_parser.rs  mod.rs  text_parser.rs
port/assimp_rs/src/material/: mod.rs
port/assimp_rs/src/postprocess/: mod.rs
port/assimp_rs/src/postprocess/convert_to_left_hand_process/: flip_uvs_process.rs  flip_winding_order_process.rs  mod.rs
port/assimp_rs/src/structs/: aabb.rs  bone.rs  camera.rs  color.rs  face.rs  importer_desc.rs  key.rs  light.rs  material.rs  mesh.rs  meta.rs  mod.rs  node.rs  nodes.rs  plane.rs  ray.rs  scene.rs  texture.rs
port/assimp_rs/src/structs/anim/: anim.rs  interpolate.rs  mod.rs
port/assimp_rs/src/structs/exporter/: mod.rs
port/assimp_rs/src/traits/importer/: README.md  error.rs  mod.rs  trait_define.rs
port/assimp_rs/src/utils/: mod.rs  read.rs
port/assimp_rs/src/utils/compression/: error.rs  mod.rs
port/assimp_rs/src/utils/fast_atof/: error.rs  mod.rs
port/assimp_rs/src/utils/float_precision/: mod.rs
