[package]
name = "assimp_rs"
version = "0.1.0"
authors = ["David Golembiowski <dmgolembiowski@gmail.com>"]
edition = "2024"

[dependencies]
bitflags = "2.9.1"
byteorder = { version = "1.5.0", default-features = false }
flate2 = "1.1.2"
glam = { version = "0.30", default-features = false }
indexmap = "2.9.0"
lexical-parse-float = { version = "1.0.5", default-features = false }
thiserror = "2.0.12"

[features]
default = ["std", "x_file"]
double_precision = []
std = ["glam/std", "byteorder/std"]
libm = ["glam/libm"]

# All formats
x_file = []
