[package]
name = "assimp_rs"
version = "0.1.0"
authors = ["David Golembiowski <dmgolembiowski@gmail.com>"]
edition = "2024"

[dependencies]
bitflags = "2.9.1"
byteorder = { version = "1.5.0", default-features = false }
encoding_rs = "0.8.35"
glam = { version = "0.30", default-features = false }
indexmap = "2.10.0"
lexical-parse-float = { version = "1.0.5", default-features = false }
thiserror = "2.0.12"
zlib-rs = { version = "0.5.1", optional = true, default-features = false, features = [
    "rust-allocator",
] }

[features]
default = ["std", "x_file", "compression"]
double_precision = []
std = ["glam/std", "byteorder/std"]
libm = ["glam/libm"]
compression = ["zlib-rs"]
# All formats
x_file = []
